Initial Gamepad API commit
Changes to allow the use of physical game devices such as gamepads and joysticks on browsers that support the HTML5 Gamepad API

--- a/index.css
+++ b/index.css
@@ -63,6 +63,8 @@ input[type=text] {
 
 /*---------------------------------*/
 
+.hidden { display: none; }
+
 .gray { color:gray; }
 .green { color:green; }
 .orange { color:orange; }
